fix: 실행되도록 서비스 구조 개선

--- a/env.example
+++ b/env.example
@@ -12,6 +12,9 @@ GOOGLE_APPLICATION_CREDENTIALS=path/to/credentials.json
 # 날씨 API 설정 (선택사항)
 WEATHER_API_KEY=your-weather-api-key
 
+# 제철 식재료 API 설정
+SEASONAL_API_KEY=your_actual_api_key_here
+
 # 서버 설정
 HOST=0.0.0.0
 PORT=8000
