--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ uvicorn==0.24.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
 opensearch-py==2.3.2
-google-cloud-vision==3.4.4
-openai==1.3.5
+openai==1.30.5
+httpx==0.27.0
 pydantic==2.5.2
 pydantic-settings==2.1.0
-python-jose==3.3.0
 requests==2.31.0
-pillow==10.1.0
 numpy==1.26.2
 aiohttp==3.9.1
+
+# 선택적 의존성 (개발/테스트용)
+pytest==7.4.3
+pytest-asyncio==0.21.1
