chore: Remove development files and complete GitHub setup

--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # OpenSearch 설정 (업로드 스크립트와 동일)
-OPENSEARCH_HOST=your-domain.region.es.amazonaws.com
-OPENSEARCH_USERNAME=master-user
-OPENSEARCH_PASSWORD=your-password
+OPENSEARCH_HOST=3.36.96.184
+OPENSEARCH_USERNAME=
+OPENSEARCH_PASSWORD=
 
 # OpenAI 설정 (필수)
 OPENAI_API_KEY=your-openai-api-key
