--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # =================================================================
 # AI 서버 프로젝트 .gitignore
-# 팀원들과 공유할 필요가 없는 파일들을 제외
+# 새로 clone 받은 팀원이 오류 없이 실행할 수 있도록 정리
 # =================================================================
 
 # 1. 파이썬 관련 자동 생성 파일들
@@ -77,102 +77,46 @@ certificates/
 *.p12
 *.pfx
 
-# 9. 데이터 파일 (용량이 크고 민감한 정보 포함 가능)
-data/
-*.pkl
-*.pickle
-*.csv
-*.json
-!data/.gitkeep  # 디렉토리 구조는 유지
-
 # =================================================================
-# 10. 중복된 문서 파일들 (README.md만 유지)
-# =================================================================
-BACKEND_INTEGRATION_GUIDE.md
-DATA_FLOW_GUIDE.md
-FRONTEND_INTEGRATION_GUIDE.md
-INTEGRATION_GUIDE.md
-PROJECT_GUIDE.md
-PROJECT_STRUCTURE.md
-README_LOCAL_SETUP.md
-SETUP_GUIDE.md
-
-# =================================================================
-# 11. 개발/디버깅용 임시 스크립트들 (팀원들에게 불필요)
-# =================================================================
-debug_*.py
-*_debug.py
-quick_*.py
-simple_*.py
-test_detailed_*.py
-test_integration.py
-test_knn_*.py
-test_vector_*.py
-*_check.py
-direct_*.py
-
-# 특정 개발용 파일들
-debug_opensearch.py
-debug_vector_direct.py
-debug_recipe_fields.py
-direct_opensearch_check.py
-test_detailed_recommendation.py
-test_integration.py
-test_knn_queries.py
-test_vector_search_fixed.py
-vector_search_fix.py
-vector_search_safe.py
-quick_opensearch_check.py
-simple_check.py
-
-# 12. 백업 및 임시 버전 파일들
-*_v2.py
-*_v3.py
-*_safe.py
-*_simple.py
-*_fix.py
-*_fixed.py
-*_temp.py
-*_backup.py
-
-# =================================================================
-# 13. 시맨틱 검색 개발 과정에서 생성된 임시 파일들
+# 9. 사용하지 않는 중복 파일들 제거
 # =================================================================
 
-# 중복된 메인 파일들 (main.py만 유지)
-app/main_fixed.py
-app/main_v3.py
-app/main_final.py
+# 메인 파일 중복본들 (main.py만 유지)
+app/main_*.py
 
-# 중복된 서비스 파일들 (enhanced_search_service_script.py만 유지)
-app/services/enhanced_search_service_script_fixed.py
-app/services/enhanced_search_service_v2.py
-app/services/enhanced_search_service_v3.py
-app/services/enhanced_search_service_simple.py
-app/services/enhanced_search_service_final.py
+# API 파일 중복본들 (현재 사용 중인 파일들만 유지)
+app/api/search_*.py
+!app/api/search.py
 
-# 중복된 API 파일들 (search.py만 유지)
-app/api/search_fixed.py
-app/api/search_v3.py
-app/api/search_final.py
+# 서비스 파일 중복본들 (script.py만 유지)
+app/services/enhanced_search_service_*.py
+!app/services/enhanced_search_service_script.py
 
-# 개발 과정에서 생성된 스코어 계산기들 및 유틸리티들
-app/utils/openai_relevance_scorer.py
-app/utils/openai_relevance_scorer_fixed.py
-app/utils/openai_relevance_scorer_v3.py
-app/utils/openai_relevance_scorer_final.py
+# 유틸리티 중복본들 (메인 파일만 유지)
+app/utils/openai_relevance_scorer_*.py
+!app/utils/openai_relevance_scorer.py
+
+# 사용하지 않는 유틸리티 파일
 app/utils/smart_score_calculator.py
-app/utils/score_normalizer.py
-app/utils/__init__.py
 
-# 테스트 파일들 (test_api.py, test_connection.py만 유지)
-test_fixed_semantic_search.py
-test_semantic_search_v*.py
-test_openai_*.py
-run_fixed_tests.bat
+# 테스트 파일들 (핵심 연결 테스트만 유지)
+test_*.py
+!test_connection.py
+
+# 배치 파일들 (필요시 각자 로컬에서 생성)
+run_*.bat
 setup_project.py
 
-# 14. 기타 임시 파일들
+# 문서 파일들 (README.md와 API.md만 유지)
+*.md
+!README.md
+!docs/API.md
+
+# 셋업 스크립트들 (setup.py만 유지)
+setup.bat
+setup.sh
+
+# 기타 임시/백업 파일들
 *.bak
 *.orig
 *.rej
@@ -180,45 +124,3 @@ setup_project.py
 .#*
 .*.swp
 .*.swo
-
-# =================================================================
-# 예외: 팀원들과 공유해야 할 파일들
-# =================================================================
-
-# ✅ 핵심 테스트 파일만 포함
-!test_connection.py
-!test_api.py
-!test_server.py
-
-# ✅ 공식 설정 예시 파일들은 포함
-!.env.example
-!env.example
-
-# ✅ 메인 문서는 포함 (README.md만)
-!README.md
-
-# ✅ 설정 파일들은 포함
-!docker-compose.yml
-!Dockerfile
-!requirements.txt
-!setup.py
-!setup.sh
-!setup.bat
-
-# ✅ 메인 애플리케이션 코드는 모두 포함
-!app/main.py
-!app/config/
-!app/models/
-!app/clients/
-!app/api/search.py
-!app/api/recommendation.py
-!app/api/integration.py
-!app/api/ocr.py
-!app/services/enhanced_search_service_script.py
-!app/services/recommendation_service.py
-!app/services/search_service.py
-!app/services/weather_service.py
-!app/services/ocr_service.py
-!app/utils/synonym_matcher.py
-!app/utils/text_processor.py
-!app/utils/image_preprocessor.py
