--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ requests==2.31.0
 numpy==1.26.2
 aiohttp==3.9.1
 
+# 오타 교정용
+# (추가 패키지 불필요 - 내장 기능만 사용)
+
 # 선택적 의존성 (개발/테스트용)
 pytest==7.4.3
 pytest-asyncio==0.21.1
